--- a/index.css
+++ b/index.css
@@ -1,3 +1,68 @@
 body {
-    margin: 0;
+  margin: 0;
+  background: #1f2937;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+}
+
+h1 {
+  font-family: "Karla";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 40px;
+  line-height: 40px;
+  color: #ffffff;
+  margin: 10px 0;
+}
+
+.coloured {
+  color: #4adf86;
+}
+
+p {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 28px;
+  margin: 10px 0 30px 0;
+  color: #d5d4d8;
+}
+
+button {
+  background: #10b981;
+  width: 191px;
+  height: 42px;
+  padding: 9px 17px 9px 15px;
+  border: 0;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+  border-radius: 6px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  color: #ffffff;
+  margin: 5px 0 20px 0;
+}
+
+hr {
+  border: 1px solid #2f3e53;
+  width: 446px;
+}
+
+#password-area {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.password {
+  width: 211px;
+  height: 39px;
+  background: #273549;
+  border-radius: 6px;
 }
